Fix mising map on ios due to flexbox usage

--- a/src/pages/map/map.scss
+++ b/src/pages/map/map.scss
@@ -10,17 +10,14 @@ page-map {
   }
 
   .container {
-    display: flex;
-    flex-direction: column;
     height: 100%;
 
     map {
-      flex: 1 0;
-      display: flex;
-
-      .leaflet-container {
-        flex: 1;
-      }
+      position: absolute;
+      top: $segment-button-md-height;
+      bottom: 0;
+      left: 0;
+      right: 0;
     }
 
     ion-fab[top] {
